# YOWR-3HT8H3

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/: hello.txt
hlsf-engine-webgl/: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
hlsf-engine-webgl/.github/workflows/: ci.yml
hlsf-engine-webgl/public/fonts/: OFL-AtkinsonHyperlegible.txt
hlsf-engine-webgl/src/: app.js  state.js  styles.css
hlsf-engine-webgl/src/core/: attention.js  color.js  expand.js  export.js  formatting.js  glyphs.js  graph.js  layout.js  math.js  memory.js  quantize.js  reasoning.js  regions.js  retrieval.js  safety.js  steps.js  telemetry.js  threads.js  tokenize.js
hlsf-engine-webgl/src/data/: glyphs.json  seed_associations.json  stopwords.json
hlsf-engine-webgl/src/renderer/: atlas.js  buffers.js  camera2d.js  gl-utils.js  picking.js  renderer.js
hlsf-engine-webgl/src/ui/: ui-helpers.js
hlsf-engine-webgl/tests/: export.test.js  pipeline.test.js  quantize.test.js  renderer.sanity.test.js  tokenize.test.js  ui.mount.test.js
schema/: space_field.schema.json
src/hlsf/: __init__.py  analysis.py  attention.py  cli.py  embeddings.py  expand.py  generation.py  geometry.py  glyphs.py  graphing.py  json_utils.py  llm_tasks.py  local_model.py  pipeline.py  settings.py  simple_graph.py  threads.py  tokenize.py
src/hlsf/providers/: __init__.py  base.py  mock.py  (+1 more)
src/hlsf_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_pipeline.py  test_pipeline_llm_mock.py  test_tokenize.py
(+24 files in other folders)
