[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hlsf-engine"
version = "0.0.0.0"
description = "High-Level Space Field (HLSF) cognition engine with LLM integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "HLSF Authors"}]
dependencies = [
  "numpy>=1.26",
  "networkx>=3.2",
  "requests>=2.31",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
]

[project.scripts]
hlsf = "hlsf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
